trunk/Archive2/ab/f1025ec8c55f7f/output
main.cpp:11:18: error: invalid application of 'sizeof' to a function type
    std::cout << sizeof(gg()) << std::endl;
                 ^     ~~~~~~
1 error generated.
